feat: [CO-1379] compile jdk version to 17 (#21)